Fixes box shadow for dark mode

--- a/final/colors-hub/src/App.css
+++ b/final/colors-hub/src/App.css
@@ -17,3 +17,6 @@
 .dark .pagination li{
   border:1px solid #ffffff;
 }
+.dark *{
+  box-shadow: none;
+}
